# pygame-dps-2d

./: README.md  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
src/pygame/extensions/dps/2d/: camera.py  menu.py
src/pygame/extensions/dps/pg2d/: __init__.py  button.py  camera.py  common.py  menu.py  physics.py  sprite.py  types.py
