[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pygame-dps-2d"
authors = [
  { name = "Duncan Sommerville", email = "duncan.sommerville@gmail.com" },
]
description = "2D game modules for Pygame extension library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dynamic = ["version"]
dependencies = ["pygame-dps-core>=0.1.3"]

[project.urls]
Homepage = "https://github.com/dpsommer/pygame-dps-2d"
Issues = "https://github.com/dpsommer/pygame-dps-2d/issues"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pygame/extensions/dps/pg2d/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/pygame"]

[tool.hatch.build.targets.sdist]
include = ["src/**/*.py", "/tests"]
exclude = ["/.trunk"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q -p no:warnings"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.bandit.assert_used]
skips = ["**/*_test.py", "**/test_*.py"]
